# OGlProj

./: .gitignore  CMakeLists.txt  OpenGLProject.vcxproj  imgui.ini
SRC/: Application.cpp  IndexBuffer.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OldApplication.cpp  Renderer.cpp  Renderer.h  Shader.h  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBufferLayout.cpp  VertexBufferLayout.h
SRC/tests/: TestModel.cpp  TestModel.h  TestTexture2D.cpp  test.h
res/shader/: vbasic.shader
